Registeration validation added and some bug fixes

--- a/src/admin_add_candidate.html
+++ b/src/admin_add_candidate.html
@@ -68,27 +68,27 @@
                 </div>
             </div>
         </nav>
-        <header style="color: white; text-align: center; padding: 30px;">
+        <header style="color: white; text-align: center; padding: 20px;">
             <h1>Candidates List</h1>
         </header>
         <section id="content">
 
-            <div class="row">
-                <div class="col text-center row mt-5">
+            <div class="row mt-2">
+                <div class="col text-center row">
                     <div class="col-lg-2"></div>
                     <div class="col-lg-8 bg-light">
                         <h3>Already Added Candidates</h3>
-                        <ul name="already_registered_candidates" id="already_registered_candidates">
+                        <ol name="already_registered_candidates" id="already_registered_candidates">
 
-                        </ul>
+                        </ol>
 
                     </div>
                     <div class="col-lg-2"></div>
                 </div>
-                <div class="col text-center row mt-5">
+                <div class="col text-center row">
                     <div class="col-lg-2"></div>
                     <div class="col-lg-8 bg-light">
-                        <h3>Voters Interested For Candidacy</h3>
+                        <h3>Candidacy Applications</h3>
                         <form onSubmit="App.admin_add_candidate()" class="admin_add_candidate_event">
                             <label for="add_candidate">
                                 <h6>Choose a candidate</h6>
@@ -103,19 +103,19 @@
                 </div>
             </div>
 
-            <div class="row">
-                <div class="col text-center row mt-5">
+            <div class="row mb-5 mt-5">
+                <div class="col text-center row">
                     <div class="col-lg-2"></div>
                     <div class="col-lg-8 bg-light">
                         <h3>Deleted Candidates</h3>
-                        <ul name="already_deleted_candidates" id="already_deleted_candidates">
+                        <ol name="already_deleted_candidates" id="already_deleted_candidates">
 
-                        </ul>
+                        </ol>
 
                     </div>
                     <div class="col-lg-2"></div>
                 </div>
-                <div class="col text-center row mt-5">
+                <div class="col text-center row">
                     <div class="col-lg-2"></div>
                     <div class="col-lg-8 bg-light">
                         <h3>Delete Candidates</h3>
