--- a/src/admin_add_voter.html
+++ b/src/admin_add_voter.html
@@ -68,23 +68,22 @@
                 </div>
             </div>
         </nav>
-        <header style="color: white; text-align: center; padding: 30px;">
+        <header style="color: white; text-align: center; padding: 20px;">
             <h1>Voters List</h1>
         </header>
         <section id="content">
-            <div class="row">
-                <div class="col text-center row mt-5">
+            <div class="row mt-2">
+                <div class="col text-center row">
                     <div class="col-lg-2"></div>
                     <div class="col-lg-8 bg-light">
                         <h3>Already Added Voters</h3>
                         <ol name="already_registered_voters" id="already_registered_voters">
-
                         </ol>
 
                     </div>
                     <div class="col-lg-2"></div>
                 </div>
-                <div class="col text-center row mt-5">
+                <div class="col text-center row">
                     <div class="col-lg-2"></div>
                     <div class="col-lg-8 bg-light">
                         <h3>Eligible Voters</h3>
@@ -100,7 +99,7 @@
                     <div class="col-lg-2"></div>
                 </div>
             </div>
-            <div class="row">
+            <div class="row mb-5">
                 <div class="col text-center row mt-5">
                     <div class="col-lg-2"></div>
                     <div class="col-lg-8 bg-light">
