--- a/src/Voter.html
+++ b/src/Voter.html
@@ -47,10 +47,10 @@
         <header class="mt-3" style="text-align: center;color: white; padding: 30px;">
             <h1>Voter Election Page</h1>
         </header>
-        <div class="text-center row mt-5">
+        <div class="text-center row mt-2 mb-2">
             <div class="col-lg-3"></div>
-            <div class="card col-lg-6 mt-5">
-                <div class="card-body mt-2">
+            <div class="card col-lg-6">
+                <div class="card-body">
                     <h3 class="card-title">About Election</h3>
                     <div class="m-b-25"> <img src="//img.icons8.com/fluent/96/000000/test-account.png"
                             class="img-radius" alt="User-Profile-Image"> </div>
