--- a/src/admin_home.html
+++ b/src/admin_home.html
@@ -46,7 +46,7 @@
             </header>
             <div class="row mt-5">
                 <div class="col-lg-2"></div>
-                <div class="col-lg-8 text-center bg-light mt-5">
+                <div class="col-lg-8 text-center bg-light mt-5 mb-5">
                     <section id="content">
                         <div class="row">
                             <h1 style="padding: 30px;">Manage Elections</h1>
@@ -66,8 +66,10 @@
                                 Create New Election?</a>
                         </div><br>
                         <div style="text-align: center; margin: 5px; padding-bottom: 15px;">
-                            <center><button onclick="App.logout(); return false;" style="background-color:white; color:black; border-color: black;"
-                            class="admin_view_results_event nav-link active" type="submit">Logout</button></li></center>
+                            <center><button onclick="App.logout(); return false;"
+                                    style="background-color:white; color:black; border-color: black;"
+                                    class="admin_view_results_event nav-link active" type="submit">Logout</button></li>
+                            </center>
                         </div>
                     </section>
 
