--- a/src/result.html
+++ b/src/result.html
@@ -10,17 +10,17 @@
 
         <<style>
             .navbar-custom {
-                background-color: black;
+            background-color: black;
             }
             th, tr, td{
-                border: 1px solid black; 
-                border-collapse: collapse; 
-                text-align: center;
-                border-spacing: 5px;
-                padding: 10px;
+            border: 1px solid black;
+            border-collapse: collapse;
+            text-align: center;
+            border-spacing: 5px;
+            padding: 10px;
             }
 
-        </style>
+            </style>
     </head>
 
     <body class="bg-dark container-fluid m-0">
@@ -48,8 +48,10 @@
                         </li>
                         <li class="nav-item" id="report">
                         </li>
-                        <li class="nav-item" id="logout" style="float: right; text-align: right;"><button onclick="App.logout(); return false;" style="background-color: black; color:gray; border-color: black;"
-                            class="admin_view_results_event nav-link active" type="submit">Logout</button></li>
+                        <li class="nav-item" id="logout" style="float: right; text-align: right;"><button
+                                onclick="App.logout(); return false;"
+                                style="background-color: black; color:gray; border-color: black;"
+                                class="admin_view_results_event nav-link active" type="submit">Logout</button></li>
                     </ul>
                 </div>
             </div>
@@ -58,38 +60,43 @@
             <h1>Result</h1>
         </header>
         <section id="content">
-            <div class="row mt-5">
+            <div class="row">
                 <div class="col-lg-3"></div>
-                <div class="col-lg-6 text-center row mt-5 bg-light mb-5 ">
-                    <div style="padding: 30px; margin-left: 250px">
-                        <!-- <ol name="display_result_of_election" id="display_result_of_election">
+                <div class="col-lg-6 text-center row bg-light">
+                    <table name="display_result_of_election" class=" mt-5 mb-5"
+                        style="border: 1px solid black; border-collapse: collapse; text-align: center;">
+                        <thead>
+                            <tr>
+                                <th>
+                                    Candidate ID
+                                </th>
+                                <th>
+                                    Candidate Name
+                                </th>
+                                <th>
+                                    Vote Count
+                                </th>
+                            </tr>
+                        </thead>
+                        <tbody id="display_result_of_election">
 
-                        </ol> -->
-                        <table name="display_result_of_election" style="border: 1px solid black; border-collapse: collapse; text-align: center;">
-                                    <thead>
-                                    <tr>
-                                        <th>
-                                            Candidate ID
-                                        </th>
-                                        <th>
-                                            Candidate Name
-                                        </th>
-                                        <th>
-                                            Vote Count
-                                        </th>
-                                    </tr>
-                                </thead>
-                                <tbody id="display_result_of_election">
+                        </tbody>
 
-                                </tbody>
-                                    
-                                </table>
+                    </table>
 
-                    </div>
                 </div>
                 <div class="col-lg-3"></div>
             </div>
         </section>
+
+        <div id="done" class="row">
+            <div class="col-lg-2"></div>
+            <div class="col-lg-8 bg-light">
+                <br />
+                <p class="text-center">Currently No Results to Display</p><br />
+            </div>
+            <div class="col-lg-2"></div>
+        </div>
 
         <!-- jQuery (necessary for Bootstrap's JavaScript plugins) -->
         <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
