fixed errors in create_election and applyforcandidacy

--- a/src/applyforcandidacy.html
+++ b/src/applyforcandidacy.html
@@ -58,7 +58,7 @@
                     <div class="col-lg-8" style="text-align: left;">
                         <form onSubmit="App.applyForCandidacy(); return false;">
                             <div class="form-group">
-                                <input type="text" id="username" placeholder="User Name" required />
+                                <input type="text" id="u_id" placeholder="User ID" required />
                                 <br /> <br />
                                 <textarea id="info" rows="5" cols="50" required
                                     placeholder="Add info about yourself here."></textarea>
