--- a/src/create_election.html
+++ b/src/create_election.html
@@ -49,7 +49,7 @@
                             <label for="E_name">
                                 <h6>Election Name:</h6>
                             </label>
-                            <input type="text" id="E_name" name="E_name"><br><br>
+                            <input type="text" id="E_name" name="E_name" required><br><br>
                             <label for="date_cand_register_end"><b>Date until which Candidates can register:</b>
                             </label>
                             <input type="date" id="date_cand_register_end" name="date_cand_register_end" required><br><br>
